Fixed: responsive text wrapping

--- a/styles/content/ContentPage.module.scss
+++ b/styles/content/ContentPage.module.scss
@@ -23,7 +23,8 @@
     .Text {
       display: flex;
       flex-direction: column;
-      max-width: 60ch;
+      width: 60ch;
+      max-width: 80vw;
   
       p {
         margin: 1rem 0;
